<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?android:attr/actionBarSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.heig_vd.iict.symexercices.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Progress Bar -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sct2_pb_title" />

            <Button
                android:id="@+id/ex2_pb_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sct2_pb_btn"/>

            <ProgressBar
                android:id="@+id/ex2_pb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="0"
                style="?android:progressBarStyleHorizontal" />

            <!-- Seek Bar -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sct2_sb_title" />

            <TextView
                android:id="@+id/ex2_sb_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <SeekBar
                android:id="@+id/ex2_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="0" />

            <!-- CheckBox -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sct2_cb_title" />

            <CheckBox
                android:id="@+id/ex2_cb_choice1"
                android:text="@string/sct_cb_val1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ex2_cb_choice2"
                android:text="@string/sct_cb_val2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ex2_cb_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sct2_cb_validate"/>

            <!-- RadioGroup/RadioButton -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sct2_rb_title" />

            <RadioGroup
                android:id="@+id/ex2_rb_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ex2_rb_choice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val1" />

                <RadioButton
                    android:id="@+id/ex2_rb_choice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val2" />

                <RadioButton
                    android:id="@+id/ex2_rb_choice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val3" />

                <RadioButton
                    android:id="@+id/ex2_rb_choice4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val4" />

                <RadioButton
                    android:id="@+id/ex2_rb_choice5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val5" />

                <RadioButton
                    android:id="@+id/ex2_rb_choice6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sct_rb_val6" />

            </RadioGroup>

            <!-- RadioGroup/RadioButton -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sct2_sp_title" />

            <Spinner
                android:id="@+id/ex2_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_arrays" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
